# atlas-datamap

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
atlas/: __init__.py  __main__.py  _sigilo.py  _sigilo_build.py  config.py  history.py  onboarding.py  sdk.py  types.py  version.py
atlas/_c/: CMakeLists.txt  Makefile  __init__.py  atlas_render.c  atlas_render.h  atlas_sigilo.c  atlas_sigilo.h  build_lib.py
atlas/_c/common/: diagnostic.c  diagnostic.h  errors.c  errors.h  types.h
atlas/_c/sigil/: sigil_parse.c  sigil_parse.h  sigil_validate.c  sigil_validate.h
atlas/ai/: __init__.py  cache.py  client.py  embeddings.py  enricher.py  prompts.py  sampler.py  types.py
atlas/analysis/: __init__.py  anomalies.py  classifier.py  scorer.py
atlas/cli/: __init__.py  _common.py  _info_format.py  ask.py  diff.py  enrich.py  export.py  history.py  info.py  onboard.py  open.py  report.py  scan.py  search.py
atlas/connectors/: __init__.py  base.py  generic.py  mssql.py  mysql.py  postgresql.py  sqlite.py  type_mapping.py
atlas/export/: __init__.py  diff.py  diff_report.py  report.py  report_executive.py  snapshot.py  standalone.py  structured.py
atlas/introspection/: __init__.py  runner.py
atlas/search/: __init__.py  discovery.py  qa.py  textual.py  types.py  vector.py
atlas/sigilo/: __init__.py  _python_fallback.py  builder.py  datamap.py  hover.py  html_zoom.py  layout.py  panel.py  style.py  types.py
docs/: architecture.md  building_c_extension.md  full_product_showcase.md  getting_started.md  phase_index.md  privacy.md  publishing.md
docs/manuals/: developer_manual.md  onboarding_manual.md  system_manual.md
docs/release_notes/: phase_0.md  phase_1.md  phase_10.md  phase_11.md  phase_12.md  phase_13.md  phase_14.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md  phase_9.md
docs/specs/: phase_0_contracts.md  phase_10_contracts.md  phase_11_contracts.md  phase_12_contracts.md  phase_13_contracts.md  phase_14_contracts.md  phase_1_contracts.md  phase_2_contracts.md  phase_3_contracts.md  phase_4_contracts.md  phase_5_contracts.md  phase_6_contracts.md  phase_7_contracts.md  phase_8_contracts.md  phase_9_contracts.md
examples/: render_fictional_bank_sigilo.py  render_fictional_bank_sigilo_compare.py  scan_mssql.py  scan_mysql.py  scan_postgresql.py
examples/full_showcase/: build_full_showcase.py  enrich.selection.example.json
examples/sigilo_compare/: fictional_bank.compare.html
scripts/: check_sigilo_build.py
tests/: __init__.py  conftest.py  phase_6_samples.py  run_tests.sh  test_anomalies_6c.py  test_base_connector.py  test_build_3c.py  test_c_library.sh  test_c_render.py  test_classifier_6a.py  test_config.py  test_connectors_factory.py  test_datamap_4a.py  test_discovery_7b.py  test_hover_4b.py  test_info_5c.py  test_layout_4c.py  test_mssql_2b.py  test_mysql_2a.py  test_onboarding.py  test_open_5b.py  test_postgresql_1a.py  test_postgresql_1b.py  test_postgresql_1c.py  test_postgresql_1d.py  test_report_7c.py  test_scan_5a.py  test_scorer_6b.py  test_search_7a.py  test_sigilo_3b.py  test_type_mapping.py  test_types.py  test_version.py
tests/integration/: conftest.py  docker-compose.yml  mssql_setup.sql  mysql_setup.sql
tests/integration/phase_0/: __init__.py  helpers.py  test_0a_packaging.py  test_0b_config.py  test_0c_connectors.py
tests/integration/phase_1/: __init__.py  test_1a_connection.py  test_1b_tables_columns.py  test_1c_relationships_indexes.py  test_1d_sampling_stats.py
tests/integration/phase_10/: helpers.py  test_cli_ask_10c.py  test_qa_10a.py  test_vector_10b.py
tests/integration/phase_11/: __init__.py  helpers.py  test_cli_history_11c.py  test_snapshot_11a.py  test_snapshot_diff_11b.py
tests/integration/phase_12/: __init__.py  helpers.py  test_report_exec_12c.py  test_standalone_12a.py  test_structured_12b.py
tests/integration/phase_13/: __init__.py  helpers.py  test_generic_13c.py  test_mariadb_13b.py  test_sqlite_13a.py
tests/integration/phase_14/: __init__.py  helpers.py  test_distribution_14c.py  test_full_showcase_example.py  test_onboarding_14d.py  test_public_api_14a.py  test_regression_14b.py
tests/integration/phase_2/: __init__.py  test_2a_mysql.py  test_2b_mssql.py  test_2c_type_mapping.py
tests/integration/phase_3/: __init__.py  test_3a_c_library.py  test_3b_sigilo.py  test_3c_build_flow.py
tests/integration/phase_4/: __init__.py  test_4a_datamap.py  test_4b_hover.py  test_4c_layout.py
tests/integration/phase_5/: __init__.py  test_5a_scan.py  test_5b_open.py  test_5c_info.py
tests/integration/phase_6/: helpers.py  test_6a_classifier.py  test_6b_scorer.py  test_6c_anomalies.py
tests/integration/phase_7/: __init__.py  helpers.py  test_discovery_7b.py  test_report_7c.py  test_search_7a.py
tests/integration/phase_8/: __init__.py  test_client_8a.py  test_enricher_8c.py  test_sampler_8b.py
tests/integration/phase_9/: __init__.py  test_cli_enrich_9c.py  test_enricher_9a.py  test_sigilo_semantic_9b.py
tests/support/: svg_baseline.py
