[build-system]
requires = ["setuptools>=77", "wheel>=0.42", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-datamap"
version = "1.0.6"
description = "Structural and semantic database discovery through navigable data maps"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Erick Andrade Busato" }]
keywords = ["database", "schema", "metadata", "discovery", "datamap", "atlas"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "tomli>=2.0.1; python_version < '3.11'",
  "cffi>=1.16",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9"]
mysql = ["mysql-connector-python>=8.3"]
mssql = ["pyodbc>=5.1"]
generic = ["sqlalchemy>=2.0"]
ai = ["requests>=2.31"]
sigilo = ["cffi>=1.16"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "mysql-connector-python>=8.3",
  "pyodbc>=5.1",
  "psycopg2-binary>=2.9",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-docker>=3.1",
  "pdoc>=14.5",
  "ruff>=0.4",
  "sqlalchemy>=2.0",
  "setuptools>=77",
  "twine>=5.1",
  "wheel>=0.42",
  "cibuildwheel>=2.20",
]

[project.scripts]
atlas = "atlas.cli:cli"

[project.urls]
Repository = "https://github.com/eabusato/atlas-datamap"
Documentation = "https://github.com/eabusato/atlas-datamap/tree/main/docs"
Changelog = "https://github.com/eabusato/atlas-datamap/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]
exclude = ["atlas._c.build*"]

[tool.setuptools.package-data]
"atlas" = [
  "py.typed",
  "_c/*.h",
  "_c/*.c",
  "_c/common/*.h",
  "_c/common/*.c",
  "_c/sigil/*.h",
  "_c/sigil/*.c",
  "_c/CMakeLists.txt",
  "_c/Makefile",
  "libatlas_sigilo.so",
  "libatlas_sigilo.dylib",
  "libatlas_sigilo.dll",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=atlas --cov-report=term-missing -v"
markers = [
  "integration: integration test",
  "phase_0a: phase 0A integration coverage",
  "phase_0b: phase 0B integration coverage",
  "phase_0c: phase 0C integration coverage",
  "phase_1a: phase 1A integration coverage",
  "phase_1b: phase 1B integration coverage",
  "phase_1c: phase 1C integration coverage",
  "phase_1d: phase 1D integration coverage",
  "phase_2a: phase 2A integration coverage",
  "phase_2b: phase 2B integration coverage",
  "phase_2c: phase 2C integration coverage",
  "phase_3a: phase 3A integration coverage",
  "phase_3b: phase 3B integration coverage",
  "phase_3c: phase 3C integration coverage",
  "phase_4a: phase 4A integration coverage",
  "phase_4b: phase 4B integration coverage",
  "phase_4c: phase 4C integration coverage",
  "phase_5a: phase 5A integration coverage",
  "phase_5b: phase 5B integration coverage",
  "phase_5c: phase 5C integration coverage",
  "phase_6a: phase 6A integration coverage",
  "phase_6b: phase 6B integration coverage",
  "phase_6c: phase 6C integration coverage",
  "phase_7a: phase 7A integration coverage",
  "phase_7b: phase 7B integration coverage",
  "phase_7c: phase 7C integration coverage",
  "phase_8a: phase 8A integration coverage",
  "phase_8b: phase 8B integration coverage",
  "phase_8c: phase 8C integration coverage",
  "phase_9a: phase 9A integration coverage",
  "phase_9b: phase 9B integration coverage",
  "phase_9c: phase 9C integration coverage",
  "phase_10a: phase 10A integration coverage",
  "phase_10b: phase 10B integration coverage",
  "phase_10c: phase 10C integration coverage",
  "phase_11a: phase 11A integration coverage",
  "phase_11b: phase 11B integration coverage",
  "phase_11c: phase 11C integration coverage",
  "phase_12a: phase 12A integration coverage",
  "phase_12b: phase 12B integration coverage",
  "phase_12c: phase 12C integration coverage",
  "phase_13a: phase 13A integration coverage",
  "phase_13b: phase 13B integration coverage",
  "phase_13c: phase 13C integration coverage",
  "phase_14a: phase 14A integration coverage",
  "phase_14b: phase 14B integration coverage",
  "phase_14c: phase 14C integration coverage",
]

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-musllinux_*"
test-command = "python -c \"import atlas; import atlas._sigilo as s; print(atlas.__version__); print('native', s.available(), s.load_error()); assert s.available(), s.load_error()\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64", "universal2"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.pdoc]
docformat = "google"

[tool.coverage.run]
source = ["atlas"]
omit = ["tests/*", "atlas/_c/*"]

[tool.coverage.report]
fail_under = 80
